kubernetes-templates/additionDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addition-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: addition
  template:
    metadata:
      labels:
        app: addition
    spec:
      containers:
      - name: addition
        image: <your-docker-registry>/addition:<tag>
        ports:
        - containerPort: 8080
          Port: 8080
