kubernetes-templates/webServerDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator-client
  template:
    metadata:
      labels:
        app: calculator-client
    spec:
      containers:
      - name: calculator-client
        image: <your-javascript-docker-registry>/calculator-client:<tag>
        ports:
        - containerPort: 3000
