kubernetes-templates/additionService.yaml
apiVersion: v1
kind: Service
metadata:
  name: addition-service
spec:
  selector:
    app: addition
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
