kubernetes-templates/webServerService.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
spec:
  type: NodePort
  selector:
    app: calculator-client
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30001
